--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "base58-js": "2.0.0",
     "bch-encrypt-lib": "2.1.1",
     "bch-message-lib": "2.3.1",
+    "bch-nostr": "1.3.1",
     "bch-token-sweep": "2.2.1",
     "cli-table": "0.3.11",
     "collect.js": "4.36.1",
